# templates

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_cookiecutter.py  test_pre_gen_project.py
{{cookiecutter.name}}/: pyproject.toml
{{cookiecutter.name}}/src/: __init__.py  __main__.py
