[tool.poetry]
name = "{{ cookiecutter.name }}"
authors = ["{{ cookiecutter.authors }}"]
description = "{{ cookiecutter.description }}"
version = "{{ cookiecutter.version }}"
package-mode = false


[tool.poetry.dependencies]
python = "^3.9"
pymysql = "^1.1"
alembic = "1.14"

{% if cookiecutter.cli_framework == "typer" %}
typer = "^0.9.0"
{% elif cookiecutter.cli_framework == "click" %}
click = "^8.1.3"
{% endif %}

{% if cookiecutter.db_framework == "sqlite" %}
sqlalchemy = "^2.0"
{% elif cookiecutter.db_framework == "sqlalchemy" %}
sqlalchemy = "^2.0"
pymysql = "^1.0"
{% endif %}

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"